// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 8px;
}

.c2 {
  box-shadow: 0px 2px 0px 0px #000;
}

<button
  className="c0 c1 c2"
  name="default"
>
  default
</button>
`;

exports[`Input rounded 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 8px;
}

<button
  className="c0 c1"
  name="default"
>
  default
</button>
`;

exports[`Input roundedPronounced 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 4em;
}

<button
  className="c0 c1"
  name="default"
>
  default
</button>
`;

exports[`Input roundedPronouncedShadow 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 4em;
}

<button
  className="c0 c1"
  name="default"
>
  default
</button>
`;

exports[`Input roundedShadow 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 8px;
}

.c2 {
  box-shadow: 0px 2px 0px 0px #000;
}

<button
  className="c0 c1 c2"
  name="default"
>
  default
</button>
`;

exports[`Input square 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

<button
  className="c0"
  name="default"
>
  default
</button>
`;

exports[`Input squareShadow 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  box-shadow: 0px 2px 0px 0px #000;
}

<button
  className="c0 c1"
  name="default"
>
  default
</button>
`;

exports[`Input style overrides 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 8px;
}

.c2 {
  box-shadow: 0px 2px 0px 0px #000;
}

<button
  className="c0 c1 c2"
  name="override-a"
  styles={
    {
      "background": "red",
      "height": "100px",
    }
  }
>
  press me
</button>
`;

exports[`Input submit 1`] = `
.c0 {
  height: 30px;
  cursor: pointer;
  border: 1px solid #000;
  padding: 0px 15px;
  background: #fff;
}

.c1 {
  border-radius: 8px;
}

.c2 {
  box-shadow: 0px 2px 0px 0px #000;
}

<button
  className="c0 c1 c2"
  type="submit"
>
  press me
</button>
`;
